--- a/app/views/usuarios/registrations/new.html.erb
+++ b/app/views/usuarios/registrations/new.html.erb
@@ -32,14 +32,14 @@
         <%= f.label "Apellidos" %><br />
         <%= f.text_field :apellidos, class: 'form-control' %>
       </div>
-       <div class="field">
+      <!--  <div class="field">
         <%= f.label "Rol de Usuario" %><br />
         <%= f.select :rol, rol_usuario, { include_blank: 'Seleccionar rol de usuario' }, class: 'form-control' %>
       </div>
       <div class="field">
         <%= f.label "Habilitado" %><br />
         <%= check_box_tag "es_habilitado", "SI", true, class: 'form-control'  %> 
-      </div>
+      </div> -->
 
       <div class="actions btn-group">
         <%= f.submit "Guardar Usuario", class: 'btn btn-info ' %>
