--- a/app/views/usuarios/registrations/new.html.erb
+++ b/app/views/usuarios/registrations/new.html.erb
@@ -36,10 +36,10 @@
         <%= f.label "Apellidos" %><br />
         <%= f.text_field :apellidos, class: 'form-control' %>
       </div>
-      <!-- <div class="field">
+      <div class="field">
         <%= f.label "Rol de Usuario" %><br />
         <%= f.select :rol, rol_usuario, { include_blank: 'Seleccionar rol de usuario' }, class: 'form-control' %>
-      </div> -->
+      </div>
       <div class="field">
         <%= f.label "Habilitado" %><br />
         <%= f.check_box :habilitado, { :checked => true}  %> 
