--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Hola Administrador!</h2>
+<h2>Hola <%= @nombre %> !</h2>
 
 
 
@@ -6,6 +6,8 @@
 </br>
 <div>
   <ul class="list-unstyled">
+<% if @div_admin %>
+    <div >
     <li class><%= link_to 'Tipos de Producto', tipos_path, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
       	
@@ -21,7 +23,14 @@
     </br>
     <li><%= link_to 'Menus', menus_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>
-    
+    </div>
+<%end%>
+<% if @div_usuario %>
+    <div>
+    <li><%= link_to 'Comprar Menu', root_path, class: 'btn btn-default btn-lg btn-block'  %></li>
+    </div>
+<%end%>
+    </br>
     
   </ul>	
 </div>
