--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -27,7 +27,7 @@
 <%end%>
 <% if @div_usuario %>
     <div>
-    <li><%= link_to 'Comprar Menu', root_path, class: 'btn btn-default btn-lg btn-block'  %></li>
+    <li><%= link_to 'Comprar Menu', venta_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </div>
 <%end%>
     </br>
