signin y signup forms estetica

--- a/app/views/cuenta/edit.html.erb
+++ b/app/views/cuenta/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editar la password</h1>
+<h1>Editar tu contraseña</h1>
 <%= form_for(@cuenta, :url => { :action => "update_password" } ) do |f| %>
   <div class="field">
     <%= f.label :password, "Password" %><br />
