--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,18 +1,21 @@
-<h2>Editar la Password</h2>
+<h2>Editar tu contraseña <%= current_cuentum.email %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :password, "Password" %><br />
-    <%= f.password_field :password, :autocomplete => "off"  %>
+    <%= f.label :password, "Contraseña" %><br />
+    <%= f.password_field :password, :autocomplete => "off", class: 'form-control'  %>
   </div>
+  </br>
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
+    <%= f.label "Confirmar contraseña" %><br />
+    <%= f.password_field :password_confirmation, class: 'form-control' %>
   </div>
-
+</br>
   <div class="actions">
-    <%= f.submit "Actualizar" %>
+    <%= f.submit "Actualizar", class: 'btn btn-default btn-lg btn-block' %>
   </div>
+  </br>
+  <%= link_to "Cancelar", root_path, class: 'btn btn-default btn-lg' %>
 <% end %>
