--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,33 @@
-<h2>Sign up</h2>
+<h2>Crear tu cuenta</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
+</br>
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, class: 'form-control' %>
   </div>
-
+</br>
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label "Contraseña" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> caracteres como mínimo )</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
   </div>
-
+</br>
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.label "Confirmar contraseña" %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
   </div>
-
+</br>
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Registrar", class: 'btn btn-default btn-lg btn-block' %>
   </div>
 <% end %>
-
+</br>
+</br>
+<%= link_to "Cancelar", root_path, class: 'btn btn-default btn-lg' %>
+<!-- 
 <%= render "devise/shared/links" %>
+ -->
