--- a/app/views/venta/new.html.erb
+++ b/app/views/venta/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Ventum</h1>
+<div class="section-container--header row">
+  <div class="col-md-10 col-xs-8">
+    <h2>Nueva Venta</h2>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <%= render 'form', ventum: @ventum %>
+  </div>
+</div>
 
-<%= render 'form', ventum: @ventum %>
 
-<%= link_to 'Back', venta_path %>
+
