--- a/app/views/compras/_form.html.erb
+++ b/app/views/compras/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
   <!-- VER COMO HACER PARA QUE LA FECHA SE ASIGNE ACA, SI NO DA ERROR EN EL COMPRA PARAMS... -->
-  <div class="panel-body form-group invisible">
+  <div class="panel-body form-group  hidden">
     <p><%= f.label :fecha %></p>
     <%= f.date_select :fecha, class: 'form-control' %>
   </div>
