--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,6 +23,8 @@
     <li><%= link_to 'Menus', menus_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>
     <li><%= link_to 'Usuarios', usuarios_path, class: 'btn btn-default btn-lg btn-block'  %></li>
+    </br>  
+    <li><%= link_to 'Manejo Stock Bebidas', controller: 'movimiento', class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>    
     </div>
 <%end%>
