--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,7 +31,7 @@
 <% if @div_usuario %>
     <div>
     </br>
-    <li><%= link_to 'Comprar Menu', venta_path, class: 'btn btn-default btn-lg btn-block'  %></li>
+    <li><%= link_to 'Comprar Menu', compra_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>
     <li><%= link_to 'Usuarios', usuarios_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>
