--- a/app/views/compras/new.html.erb
+++ b/app/views/compras/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Compra</h1>
 
-<%= render 'form', compra: @compra %>
-
-<%= link_to 'Back', compras_path %>
+<div class="section-container--header row">
+  <div class="col-md-10 col-xs-8">
+    <h2>Nueva Compra</h2>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <%= render 'form', compra: @compra %>
+  </div>
+</div>
