--- a/app/views/compras/show.html.erb
+++ b/app/views/compras/show.html.erb
@@ -4,6 +4,9 @@
   <strong>Fecha:</strong>
   <%= @compra.fecha %>
 </p>
+<div class="btn-group-vertical">
 
-<%= link_to 'Edit', edit_compra_path(@compra) %> |
-<%= link_to 'Back', compras_path %>
+<%= link_to 'Volver', compras_path, class: 'btn btn-default'  %>
+
+</div>
+
