--- a/app/views/compras/index.html.erb
+++ b/app/views/compras/index.html.erb
@@ -1,27 +1,37 @@
+
 <p id="notice"><%= notice %></p>
 
 <h1>Compras</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Fecha</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row">
+  <div class="col-md-12">
+    <div class="listing">
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>Fecha</th>              
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
-  <tbody>
-    <% @compras.each do |compra| %>
-      <tr>
-        <td><%= compra.fecha %></td>
-        <td><%= link_to 'Show', compra %></td>
-        <td><%= link_to 'Edit', edit_compra_path(compra) %></td>
-        <td><%= link_to 'Destroy', compra, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  
+        <tbody>
+                <%= render @compras %>
+        </tbody>
+      </table>
+
+      </div>
+    </div>
+  </div>
+  </div>
 
 <br>
+<div class="col-md-12">
+  <div class="btn-group btn-group-justified">
+    <%= link_to 'Nueva Compra', new_compra_path, class: 'btn btn-default'  %>
+  
+    <%= link_to 'Volver', root_path, class: 'btn btn-default' %>
 
-<%= link_to 'New Compra', new_compra_path %>
+  </div>
+</div>
