editar usuario limitado

--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -17,23 +17,25 @@
         <%= f.label "Apellidos" %><br />
         <%= f.text_field :apellidos, class: 'form-control' %>
       </div>
-      <div class="panel-body form-group">
-        <%= f.label "Rol de Usuario" %><br />
-        <%= f.select :rol, rol_usuario, { include_blank: 'Seleccionar rol de usuario' }, class: 'form-control' %>
-      </div>
-      <div class="panel-body form-group">
-        <%= f.label "Habilitado" %><br />
-        <%= f.check_box :habilitado, { :checked => true}  %> 
-      </div> 
-       <div class="panel-body form-group">
-        <p><%= f.label :empresa_id %></p>
-        <%= f.select :empresa_id,  Empresa.all.collect {|e| [ e.nombre, e.id ] }, { include_blank: 'Seleccionar empresa' }, class: 'form-control' %>
-        </div>
-        </br>
+      <% if @div_admin || @div_opera %>
         <div class="panel-body form-group">
-      <p><%= f.label :cuenta_id %></p>
-        <%= f.select :cuenta_id,  Cuentum.all.collect {|t| [ t.email, t.id ] }, { include_blank: 'Seleccionar cuenta' }, class: 'form-control' %>
-       </div>
+          <%= f.label "Rol de Usuario" %><br />
+          <%= f.select :rol, rol_usuario, { include_blank: 'Seleccionar rol de usuario' }, class: 'form-control' %>
+        </div>
+        <div class="panel-body form-group">
+          <%= f.label "Habilitado" %><br />
+          <%= f.check_box :habilitado, { :checked => true}  %> 
+        </div> 
+         <div class="panel-body form-group">
+          <p><%= f.label :empresa_id %></p>
+          <%= f.select :empresa_id,  Empresa.all.collect {|e| [ e.nombre, e.id ] }, { include_blank: 'Seleccionar empresa' }, class: 'form-control' %>
+          </div>
+          </br>
+          <div class="panel-body form-group">
+        <p><%= f.label :cuenta_id %></p>
+          <%= f.select :cuenta_id,  Cuentum.all.collect {|t| [ t.email, t.id ] }, { include_blank: 'Seleccionar cuenta' }, class: 'form-control' %>
+         </div>
+       <% end %>
        </br>
         <div class="btn-group">
          <%= f.submit "Guardar Usuario", class: 'btn btn-info' %>
