--- a/app/views/usuarios/edit.html.erb
+++ b/app/views/usuarios/edit.html.erb
@@ -10,6 +10,6 @@
   </div>
 </div>
 </br>
-<div>
-<%= link_to 'Volver', productos_path, class: 'btn btn-info btn-sm' %>
-</div>
+<!-- <div>
+<%= link_to 'Volver', usuarios_path, class: 'btn btn-info btn-sm' %>
+</div> -->
