--- a/app/views/ingreso_bebida/index.html.erb
+++ b/app/views/ingreso_bebida/index.html.erb
@@ -4,16 +4,23 @@
       
 
       <div class="panel-body form-group">
+
+
+
       <p><%= @bebida_recibida.nombre if @bebida_recibida%></p> 
-      <input type="text" name="cantidad"/>  
+
+      <input type="number" name="cantidad" class="form-control"/>  
       
       
 
     <div class="col-md-12">
-      <div class="btn-group btn-group-justified">
-        
+      <div class="btn-group btn-group-justified">        
         <div class="btn-group">
-        
+
+    </br>  
+
+    </br>   
+     <%= link_to 'Agregar cantidad', agregoCantidad(@bebida_recibida) , { class: 'btn btn-default btn-lg btn-block'}  %>
         </div>
         
       </div>
