--- a/app/views/ingreso_bebida/index.html.erb
+++ b/app/views/ingreso_bebida/index.html.erb
@@ -9,11 +9,9 @@
 
       <p><%= @bebida_recibida.nombre if @bebida_recibida%></p> 
 
-      <input type="number" name="cantidad" class="form-control"/>  
-<<<<<<< HEAD
-=======
+      <!-- <input type="number" name="cantidad" class="form-control"/>   -->
       
->>>>>>> 842b49be76269815d19cf789886eb097bf47d0eb
+      <%=number_field_tag :cant, "",class: 'form-control'%>
       
 
     <div class="col-md-12">
@@ -23,11 +21,9 @@
     </br>  
 
     </br>   
-<<<<<<< HEAD
-     <%= link_to 'Agregar cantidad', { :controller => :ingreso_bebida, :action => :agregoCantidad } , { class: 'btn btn-default btn-lg btn-block'}  %>
-=======
-     <%= link_to 'Agregar cantidad', agregoCantidad(@bebida_recibida) , { class: 'btn btn-default btn-lg btn-block'}  %>
->>>>>>> 842b49be76269815d19cf789886eb097bf47d0eb
+
+     <%= link_to 'Agregar cantidad', { :controller => :ingreso_bebida, :action => :agregoCantidad, :bebida => @bebida_recibida} , { class: 'btn btn-default btn-lg btn-block'}  %>
+
         </div>
         
         
