--- a/app/views/ingreso_bebida/index.html.erb
+++ b/app/views/ingreso_bebida/index.html.erb
@@ -9,7 +9,7 @@
 
       <p><%= @bebida_recibida.nombre if @bebida_recibida%></p> 
 
-      <!-- <input type="number" name="cantidad" class="form-control"/>   -->
+      <!-- <input type="number" id="probando" name="cantidad" class="form-control"/>   -->
       
       <%=number_field_tag :cant, "",class: 'form-control'%>
       
