--- a/app/views/ingreso_bebida/index.html.erb
+++ b/app/views/ingreso_bebida/index.html.erb
@@ -8,12 +8,12 @@
 
 
       <p><%= @bebida_recibida.nombre if @bebida_recibida%></p> 
-
-      <!-- <input type="number" id="probando" name="cantidad" class="form-control"/>   -->
+<!-- 
+      <input type="number" id="cantidad"  class="form-control"/>   
+       -->
+       
+      <%=number_field_tag :cant, class: 'form-control'%>
       
-      <%=number_field_tag :cant, "",class: 'form-control'%>
-      
-
     <div class="col-md-12">
       <div class="btn-group btn-group-justified">        
         <div class="btn-group">
@@ -22,8 +22,8 @@
 
     </br>   
 
-     <%= link_to 'Agregar cantidad', { :controller => :ingreso_bebida, :action => :agregoCantidad, :bebida => @bebida_recibida} , { class: 'btn btn-default btn-lg btn-block'}  %>
-
+     <%= link_to 'Agregar cantidad', { :controller => :ingreso_bebida, :action => :agregoCantidad, :bebida => @bebida_recibida, :cant => 1} , { class: 'btn btn-default btn-lg btn-block'}  %>
+     <!-- Hardcodeado el ingreso de 1 unidad -->
         </div>
         
         
