--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,6 +1,7 @@
+
 <p id="notice"><%= notice %></p>
 
-<h1>Bebidas</h1>
+<h1>Historial de compras de bebida</h1>
 
 <div class="row">
   <div class="col-md-12">
@@ -9,18 +10,18 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th>Nombre</th>
+              <th>Fecha</th>
+              <th>Bebida</th>
               <th>Tipo</th>
               <th>Tamaño</th>
-              <th>Precio</th>
               <th>Stock</th>
               <th colspan="3"></th>
+              <th colspan="3"></th>
             </tr>
-          </thead>
-
-  
+        </thead>
+      
         <tbody>
-                <%= render @bebidas %>
+                <%= render @stocks %>
         </tbody>
       </table>
 
@@ -29,10 +30,9 @@
   </div>
   </div>
 
-<br>
-<div class="col-md-12">
+<br><div class="col-md-12">
   <div class="btn-group btn-group-justified">
-    <%= link_to 'Nueva Bebida', new_bebida_path, class: 'btn btn-default'  %>
+    <%= link_to 'Nueva compra', new_stock_path, class: 'btn btn-default'  %>
   
     <%= link_to 'Volver', root_path, class: 'btn btn-default' %>
 
