--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,9 @@
     </br>
     <li><%= link_to 'Usuarios', usuarios_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>  
-    <li><%= link_to 'Manejo Stock Bebidas', { :controller => :movimiento, :action => :index }, { class: 'btn btn-default btn-lg btn-block'}  %></li>
+    <li><%= link_to 'Manejo Stock Bebidas', stocks_path, class: 'btn btn-default btn-lg btn-block'  %></li>
+    </br>  
+    <!-- <li><%= link_to 'Manejo Stock Bebidas', { :controller => :movimiento, :action => :index }, { class: 'btn btn-default btn-lg btn-block'}  %></li> -->
     </br>    
     </div>
 <%end%>
