muestra stock en bebidas

--- a/app/views/bebidas/show.html.erb
+++ b/app/views/bebidas/show.html.erb
@@ -22,7 +22,7 @@
 </p>
 <p>
   <strong>Stock:</strong>
-  <%= @bebida.cantidad %>
+  <%= @cantidad %>
 </p>
 <div class="btn-group-vertical">
 <%= link_to 'Editar', edit_bebida_path(@bebida), class: 'btn btn-default' %> 
