facturas en compras de bebidas, stocks en bebidas y link a comprar mas

--- a/app/views/bebidas/index.html.erb
+++ b/app/views/bebidas/index.html.erb
@@ -13,7 +13,7 @@
               <th>Tipo</th>
               <th>Tamaño</th>
               <th>Precio</th>
-              <th>Stock</th>
+              <th>Cantidad</th>
               <th colspan="3"></th>
             </tr>
           </thead>
