--- a/app/views/bebidas/_bebida.html.erb
+++ b/app/views/bebidas/_bebida.html.erb
@@ -3,6 +3,7 @@
   <td><%= bebida.tipo %></td>
   <td><%= bebida.tamanio %></td>
   <td><%= bebida.precio %></td>
+  <td><%= bebida.mi_stock %></td>
   <td>
   <div>
   <div class="btn-group">
