--- a/app/views/stocks/_stock.html.erb
+++ b/app/views/stocks/_stock.html.erb
@@ -4,6 +4,7 @@
   <td><%= stock.bebida.tipo %></td>
   <td><%= stock.bebida.tamanio %></td>
   <td><%= stock.cant %></td>
+  <td><%= stock.factura_compra %></td>
   <td>
   <div class="btn-group">
     <%= link_to '', stock, class: 'btn btn-success btn-sm glyphicon glyphicon-eye-open', :title => "Ver"'' %>
