--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -15,6 +15,7 @@
               <th>Tipo</th>
               <th>Tamaño</th>
               <th>Stock</th>
+               <th>Factura</th>
               <th colspan="3"></th>
               <th colspan="3"></th>
             </tr>
