--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -262,3 +262,15 @@ body {
   background-color: darken($btn-default-bg, 30%);
   border-color: rgb(231,231,231);
 }
+
+.check-box-barcode{
+  font-size: 25px;
+  color: darken($btn-default-bg, 50%);
+}
+
+.info{
+  font-size: 25px;
+  background-color: darken($btn-default-bg, 40%);
+  color: rgb(250,250,250);
+  border-color: darken($btn-default-bg, 80%);
+  }
