--- a/app/views/compras/_form.html.erb
+++ b/app/views/compras/_form.html.erb
@@ -32,7 +32,7 @@
     <% @bebidas.each do |bebida| %>
               
           <div class="field">
-            <%= check_box_tag "bebidas[]", bebida.id   %> <%= bebida.nombre %>
+            <%= check_box_tag "bebidas[]", bebida.id   %> <%= bebida.nombre %> - <%= bebida.tipo %> - <%= bebida.tamanio %>
             
           </div>
           <br>
