--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,6 +7,8 @@
   <ul class="list-unstyled">
 <% if @div_admin || @div_opera %>
     <div >
+    <li class><%= link_to 'Informes estadisticos y reportes', { :controller => :bi, :action => :index }, class: 'btn btn-default btn-lg btn-block' %></li>
+    </br>
     <li class><%= link_to 'Tipos de Producto', tipos_path, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
         
@@ -26,8 +28,7 @@
     </br>  
     <li><%= link_to 'Manejo Stock Bebidas', stocks_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>  
-    <!-- <li><%= link_to 'Manejo Stock Bebidas', { :controller => :movimiento, :action => :index }, { class: 'btn btn-default btn-lg btn-block'}  %></li> -->
-    </br>    
+    
     </div>
 <%end%>
 <% if @div_usuario %>
