--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <%= link_to 'EattingGO', root_path, class: 'navbar-brand' %>
+      <%= link_to 'EatingGO', root_path, class: 'navbar-brand' %>
     </div>
     
 
