--- a/app/views/application/_header_barcode.html.erb
+++ b/app/views/application/_header_barcode.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <%= link_to 'EattingGO', { :controller => :barcode, :action => :index }, class: 'navbar-brand' %>
+      <%= link_to 'EatingGO', { :controller => :barcode, :action => :index }, class: 'navbar-brand' %>
     </div>
     
 
