--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -289,10 +289,28 @@ body {
   color: #888;
 }
 
+.ec-stars-wrapper, .prueboClase {
+text-decoration: none;
+  display: inline-block;
+  
+  font-size: 32px;
+  font-size: 2rem;
+  color: #888;
+}
+.ec-stars-wrapper:hover, .prueboClase {
+  color: rgb(39, 130, 228);
+}
+
 .ec-stars-wrapper:hover a {
   color: rgb(39, 130, 228);
 }
 
 .ec-stars-wrapper > a:hover ~ a {
+  color: #888;
+}
+
+
+
+.ec-stars-wrapper > prueboClase:hover ~ a {
   color: #888;
 }
