--- a/app/views/compras/show.html.erb
+++ b/app/views/compras/show.html.erb
@@ -34,7 +34,7 @@
  
   <div class="btn-group-vertical">
 <%= debug @compra %>
-<%= link_to 'Calificar', calificar_index_path(@compra), class: 'btn btn-default'  %>
+<%= link_to 'Calificar', calificacions_path(@compra), class: 'btn btn-default'  %>
 
 </div>
 
