--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -38,6 +38,8 @@
     </br>
     <li><%= link_to 'Usuarios', usuarios_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>
+    <li><%= link_to 'Califique su compra', calificacions_path, class: 'btn btn-default btn-lg btn-block'  %></li>
+    </br>
     </div>
 <%end%>
     </br>
