gns filtro por empresa, subir botones nuevo y volver en indexs

--- a/app/views/bi/index.html.erb
+++ b/app/views/bi/index.html.erb
@@ -15,6 +15,13 @@
 
     </ul>
     </div>
+<div class="col-md-12">
+  <div class="btn-group btn-group-justified">
+    
+  
+    <%= link_to 'Volver', root_path, class: 'btn btn-default' %>
 
+  </div>
+  </br>
 
  <%= render 'footer' %>
