--- a/app/views/franjas/_franja.html.erb
+++ b/app/views/franjas/_franja.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= franja.fecha.to_formatted_s(:short)  %></td>
+  <td><%= franja.fecha.to_date  %></td>
   <td><%= franja.primera_hasta %></td>
   <td><%= franja.primera_precio %></td>
   <td><%= franja.segunda_hasta %></td>
