pruebas con graficos, googlecharts

--- a/app/views/bi/index.html.erb
+++ b/app/views/bi/index.html.erb
@@ -9,7 +9,9 @@
     <div >
     <li class><%= link_to 'Exportar consumos a GNS', { :controller => :gns, :action => :index }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
-   
+   <li class><%= link_to 'Grafica de barras prueba', { :controller => :bi, :action => :grafica_1 }, class: 'btn btn-default btn-lg btn-block' %></li>
+    </br>
+    
     
     </div>
 
