datos de bd en graficos, googlecharts

--- a/app/views/bi/grafica_1.html.erb
+++ b/app/views/bi/grafica_1.html.erb
@@ -2,7 +2,7 @@
 
 <table>
 <tr><td><%= image_tag @barv %></td></tr>
-<tr><td> 	</td></tr>
+<tr><td><div> <br></div> 	</td></tr>
 
 <tr><td><%= image_tag @pastel %></td></tr>
 
