--- a/app/views/bi/index.html.erb
+++ b/app/views/bi/index.html.erb
@@ -9,10 +9,12 @@
     <div >
     <li class><%= link_to 'Exportar consumos a GNS', { :controller => :gns, :action => :index }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
-   <li class><%= link_to 'Grafica de barras prueba', { :controller => :bi, :action => :grafica_1 }, class: 'btn btn-default btn-lg btn-block' %></li>
+   <li class><%= link_to 'Grafica: Total de compras por dia', { :controller => :bi, :action => :compras_por_dia }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
-    
-    
+    <li class><%= link_to 'Grafica: Historico de Productos mas consumidos', { :controller => :bi, :action => :productos_mas_consumidos }, class: 'btn btn-default btn-lg btn-block' %></li>
+    </br>
+    <li class><%= link_to 'Grafica: Evolucion de consumos por mes', { :controller => :bi, :action => :consumos_por_mes }, class: 'btn btn-default btn-lg btn-block' %></li>
+    </br>
     </div>
 
     </ul>
