--- a/app/assets/stylesheets/pedido.scss
+++ b/app/assets/stylesheets/pedido.scss
@@ -1,4 +1,3 @@
-// Place all the styles related to the califica controller here.
+// Place all the styles related to the pedido controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
