--- a/app/views/bi/index.html.erb
+++ b/app/views/bi/index.html.erb
@@ -17,6 +17,8 @@
     </br>
     <li class><%= link_to 'Grafica: Recaudación por día', { :controller => :bi, :action => :recaudo_por_dia }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
+    <li class><%= link_to 'Grafica: Historico de Bebidas mas consumidas', { :controller => :bi, :action => :bebidas_mas_consumidas }, class: 'btn btn-default btn-lg btn-block' %></li>
+    </br>
     </div>
 
     </ul>
