--- a/app/views/compras/new.html.erb
+++ b/app/views/compras/new.html.erb
@@ -1,11 +1,25 @@
 
 <div class="section-container--header row">
-  <div class="col-md-10 col-xs-8">
-    <h2>Nueva Compra</h2>
-  </div>
 </div>
+  <% if @div_msg %>
+  		<h2> <p>Todavia no tenemos el Menu disponible para el dia de hoy!</p>
+  		<p> Por favor intentalo mas tarde.</p>
+  		 </h2>
+
+  <% end %>
+  
 <div class="row">
+<% if @div_compra %>
+<div class="col-md-10 col-xs-8">
+    <h2>Nueva Compra</h2>
+	</div>
   <div class="col-md-12">
     <%= render 'form', compra: @compra %>
   </div>
+  <% end %>
+</div>
+<div class="btn-group-vertical">
+
+<%= link_to 'Volver', compras_path, class: 'btn btn-default'  %>
+
 </div>
