--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,11 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+  <div class="field">
+    <%= f.label :current_password, "Contraseña actual" %><br />
+    <%= f.password_field :current_password, :autocomplete => "off", class: 'form-control'  %>
+  </div>
+  </br>
 
   <div class="field">
     <%= f.label :password, "Contraseña" %><br />
