--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tipos</h1>
+<h1>Tipos de Producto</h1>
 <br>
 <div class="col-md-12">
   <div class="btn-group btn-group-justified">
