--- a/app/views/usuarios/show.html.erb
+++ b/app/views/usuarios/show.html.erb
@@ -14,6 +14,10 @@
   <strong>Apellidos:</strong>
   <%= @usuario.apellidos %>
 </p>
+<p>
+  <strong>Empresa:</strong>
+  <%= @usuario.empresa.nombre %>
+</p>
 
 <p>
   <strong>Rol:</strong>
