--- a/app/views/franjas/index.html.erb
+++ b/app/views/franjas/index.html.erb
@@ -19,12 +19,12 @@
           <thead>
             <tr>
               <th>Fecha</th>
-              <th>Sueldos hasta</th>
-              <th>Valor del ticket</th>
-              <th>Sueldos hasta</th>
-              <th>Valor del ticket</th>
-              <th>Sueldos mayores a</th>
-              <th>Valor del ticket</th>
+              <th>1ra franja</th>
+              <th>$ ticket</th>
+              <th>2da franja</th>
+              <th>$ ticket</th>
+              <th>Superiores a</th>
+              <th>$ ticket</th>
               <th colspan="3"></th>
             </tr>
        </thead>
