--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,7 +28,8 @@
     </br>  
     <li><%= link_to 'Manejo Stock Bebidas', stocks_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>  
-    
+    <li><%= link_to 'Pedidos pendientes', compras_path, class: 'btn btn-default btn-lg btn-block'  %></li>
+    </br>
     </div>
 <%end%>
 <% if @div_usuario %>
