--- a/app/views/calificacions/index.html.erb
+++ b/app/views/calificacions/index.html.erb
@@ -1,5 +1,14 @@
 <p id="notice"><%= notice %></p>
+<br>
+<div class="col-md-12">
+  <div class="btn-group btn-group-justified">
+    <%= link_to 'Nueva Calificacion', new_calificacion_path, class: 'btn btn-default'  %>
+  
+    <%= link_to 'Volver', root_path, class: 'btn btn-default' %>
 
+  </div>
+</div>
+<br><br>
 <h1>Califique sus compras</h1>
 <div class="row">
   <div class="col-md-12">
@@ -19,17 +28,7 @@
           </thead>
 
           <tbody>
-          <% if @calificacions.present? %>
-            <% @calificacions.each do |calificacion|  %>
-              <tr>
-                <td><%= calificacion.compra.fecha %></td>
-                <td><%= calificacion.valor %></td>
-                <td><%= link_to 'Show', calificacion %></td>
-                <td><%= link_to 'Edit', edit_calificacion_path(calificacion) %></td>
-                <td><%= link_to 'Destroy', calificacion, method: :delete, data: { confirm: 'Estas seguro?' } %></td>
-              </tr>
-            <% end %>
-            <% end %>
+            <%= render @calificacions %>
           </tbody>
         </table>
       </div>
@@ -39,12 +38,3 @@
 
 
 <br>
-<div class="col-md-12">
-  <div class="btn-group btn-group-justified">
-    <%= link_to 'Nueva Calificacion', new_calificacion_path, class: 'btn btn-default'  %>
-  
-    <%= link_to 'Volver', root_path, class: 'btn btn-default' %>
-
-  </div>
-</div>
-
