--- a/app/views/calificacions/_form.html.erb
+++ b/app/views/calificacions/_form.html.erb
@@ -15,7 +15,7 @@
  </div> 
   <div class="panel-body form-group">
     <p><%= f.label :valor %></p>
-    <%= f.number_field :valor, :step => "1", min: 0, max: 5, class: 'form-control' %>
+    <%= f.number_field :valor , :step => "1", min: 0, max: 5, class: 'form-control', placeholder: califico_compra %>
   </div>
   
 
