--- a/app/views/barcode/new.html.erb
+++ b/app/views/barcode/new.html.erb
@@ -36,14 +36,16 @@
     
     <% if @bebidas.present? %>
     <p><label>BEBIDAS </label></p>
-    <% @bebidas.each do |bebida| %>
+     
+      <% @bebidas.each do |bebida| %>   
+        <% if bebida.mi_stock > 0 %>           
+            <div class="check-box-barcode">
+              <%= check_box_tag "bebidas[]", bebida.id, false, :style => "width: 20px; height: 20px;"   %> <%= bebida.nombre %> - <%= bebida.tipo %> - <%= bebida.tamanio %>
               
-          <div class="check-box-barcode">
-            <%= check_box_tag "bebidas[]", bebida.id, false, :style => "width: 20px; height: 20px;"   %> <%= bebida.nombre %> - <%= bebida.tipo %> - <%= bebida.tamanio %>
-            
-          </div>
-          <br>
-    <%end%>
+            </div>
+            <br>
+        <%end%>
+      <%end%>
     <%end%>
 
   </div>
