--- a/app/views/calificacions/_form.html.erb
+++ b/app/views/calificacions/_form.html.erb
@@ -24,7 +24,7 @@
       <div class="btn-group btn-group-justified">
         
         <div class="btn-group">
-        <%= f.submit "Realizar calificacion", class: 'btn btn-info ' %>
+        <%= f.submit "Calificar", class: 'btn btn-info ' %>
         </div>
         <div class="btn-group">
         <%= link_to 'Cancelar', calificacions_path, class: 'btn btn-info '  %>
