calificar, valor con radiobutton y labels

--- a/app/views/calificacions/_form.html.erb
+++ b/app/views/calificacions/_form.html.erb
@@ -17,22 +17,22 @@
     <p><%= f.label :valor %></p>
     </br>
     <%= f.radio_button :valor, 0 %>
-    <%= label_tag("0 - Mala") %>
+    <%= f.label :valor, "0 - Mala", value: 0 %>
     </br>
     <%= f.radio_button :valor, 1 %>
-    <%= label_tag("1 - Pobre") %>
+    <%= f.label :valor, "1 - Pobre", value: 1 %>
     </br>
     <%= f.radio_button :valor, 2 %>
-    <%= label_tag("2 - Aceptable") %>
+    <%= f.label :valor, "2 - Aceptable", value: 2  %>
     </br>
     <%= f.radio_button :valor, 3 %>
-    <%= label_tag("3 - Buena") %>
+    <%= f.label :valor, "3 - Buena", value: 3 %>
     </br>
     <%= f.radio_button :valor, 4 %>
-    <%= label_tag("4 - Muy Buena") %>
+    <%= f.label :valor, "4 - Muy Buena", value: 4 %>
     </br>
     <%= f.radio_button :valor, 5 %>
-    <%= label_tag("5 - Excelente") %>
+    <%= f.label :valor, "5 - Excelente", value:5 %>
     </br>
   </div>
   
