--- a/app/views/usuarios/_usuario.html.erb
+++ b/app/views/usuarios/_usuario.html.erb
@@ -6,7 +6,7 @@
    
 
   <td>
-  <div class="btn-group btn-group-justified">
+  <div class="btn-group ">
     <%= link_to '', usuario, class: 'btn btn-success btn-sm glyphicon glyphicon-eye-open', :title => "Ver"'' %>
 
     <%= link_to '', edit_usuario_path(usuario), class: 'btn btn-default btn-sm glyphicon glyphicon-pencil', :title => "Editar" %>
