--- a/app/views/bebidas/_bebida.html.erb
+++ b/app/views/bebidas/_bebida.html.erb
@@ -6,7 +6,7 @@
   <td><%= bebida.mi_stock if bebida%></td>
   <td>
   <div>
-  <div class="btn-group btn-group-justified">
+  <div class="btn-group ">
 
     
             <%= link_to '',bebida, class: 'btn btn-success btn-sm glyphicon glyphicon-eye-open', :title => "Ver" %>
